--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
     "presets": ["env"],
     "plugins": [
       "transform-object-rest-spread",
-      "transform-react-jsx"
+      "transform-react-jsx",
+      "@babel/plugin-proposal-class-properties"
     ]
   }
