--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maor-modal",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "DialogContainer.js",
   "scripts": {
@@ -27,5 +27,8 @@
     "react-dom": "^16.7.0",
     "react-focus-lock": "^1.17.6",
     "webpack": "^4.28.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.3"
   }
 }
