--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,16 @@
 {
-    "presets": ["env"],
+    "presets": [    
+        "@babel/preset-env",
+        "@babel/preset-react"
+    ],
     "plugins": [
       "transform-object-rest-spread",
       "transform-react-jsx",
-      "@babel/plugin-proposal-class-properties"
+      [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+      ]
     ]
   }
