--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maor-modal",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "DialogContainer.js",
   "scripts": {
@@ -17,18 +17,18 @@
   },
   "homepage": "https://github.com/maorRoz/maor-modal#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-focus-lock": "^1.17.6",
     "webpack": "^4.28.4"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.2.3"
   }
 }
