--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "maor-modal",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/DialogContainer.js",
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack"
